assets/style.css
/* ... */
/* Mouse overlay */
#scrollDown-container {
    width: 5vw;
    height: 5vw;
    max-width: 25px;
    position: fixed;
    bottom: 40px;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: -2;
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
    /* bad performance issues with blending this appropriately */
    /* mix-blend-mode: difference; */
}
#scrollDown-container img {
    width: 100%;
}

/* Description Section */
#description {
    margin-top: 160vh;
}
#description, #schedule {
    min-height: 800px;
    position: relative;
}
#description .overflowTriangle {
    position: absolute;
    left: 0;
    right: 0;
    top: calc(-60vh + 1px);
    height: 60vh;
    background-color: rgb(248, 246, 237);
    color: var(--pinnacle-bg);
    -webkit-clip-path: polygon(50% 100vh, 0% 160vh, 0% 99.99%, 99.99% 99.99%, 100% 160vh);
    clip-path: polygon(50% 100vh, 0% 160vh, 0% 99.99%, 99.99% 99.99%, 100% 160vh);
    overflow: hidden;
}
#description .right-body, #schedule .right-body {
    font-size: 28px;
    font-weight: lighter;
    display: block;
    margin-left: auto;
    width: 65%;
}
#description h2, #schedule h2, #carousel h2 {
    font-size: 3.5rem;
}
#description h2 {
    margin-left: 6rem;
}

/* Schedule Section */
#schedule {
    padding-bottom: 550px;
}
#schedule h2 {
    margin-left: -8rem;
    display: inline-block;
    padding-right: 50px;
}
#schedule .inner {
    min-height: 40rem;
}
#schedule .right-body {
    margin-top: 8rem;
    font-size: 34px;
}
.calendar-obj {
    font-weight: bold;
}
.calendar-obj .time {
    float: left;
    display: inline-block;
}
.calendar-obj .description {
    float: right;
    display: inline-block;
}

/* Animated Skyline */
.skyline {
    width: calc(100% + 1px);
    position: absolute;
    left: -1;
    right: 1;
    bottom: -1px;
    height: 650px;
    overflow-x: hidden;
    pointer-events: none;
}
.skyline-component {
    width: 100%;
    height: 100%;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: bottom;
    position: absolute;
}
#skyline_black {
    background-image: url('skyline/black.svg');
}
#skyline_gold {
    background-image: url('skyline/gold.svg');
}
#skyline_goldengate {
    background-image: url('skyline/goldengate.svg');
}
#skyline_twinpeaks {
    background-image: url('skyline/twinpeaks.svg');
}
.skyline-component.animated {
    transition: transform 2s ease;
    -webkit-transform: translateX(0%);
    transform: translateX(0%);
    will-change: transform;
}
.skyline-component.off-right {
    -webkit-transform: translateX(103%);
    transform: translateX(103%);
}
.skyline-component.off-left {
    -webkit-transform: translateX(-103%);
    transform: translateX(-103%);
}

/* Sponsors Section */
#sponsors {
    text-align: center;
    z-index: 1;
}
#sponsors .inner {
    padding: 18rem 0;
}
#sponsors h2 {
    font-size: 3rem;
}
.sponsor-logos {
    width: 100%;
}
.sponsor-logos .sponsor {
    margin: 3rem auto;
    width: 100%;
    display: block;
    max-width: 300px;
}
.sponsor-logos .sponsor img {
    width: 100%;
    max-height: 30vh
}
/* Sponsor Specific Adjustments */
#hack-plus {
}
#sponsor-ad {
    max-width: 100%;
    font-size: 2rem;
}
/* Footer */
footer {
    font-size: 1.2rem;
    font-weight: bolder;
    letter-spacing: 1.2px;
/* Edge to Edge footer on ultrawide */
    position: absolute;
    left: 0;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Overlay Lines */
.linesCanvas-outside, .linesCanvas-inside {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 999;
    top:0;
    overflow: hidden;
    pointer-events:none;
}
.linesCanvas-inside {
    /* max-height: 0px;
    will-change: max-height;
    transition: max-height 0.5s ease-out; */
}
.linesCanvas-outside#mainCanvas {
    -webkit-clip-path: polygon(50% 100vh, 0% 160vh, 0% 100%, 100% 100%, 100% 160vh);
    clip-path: polygon(50% 100vh, 0% 160vh, 0% 100%, 100% 100%, 100% 160vh);
}
.linesCanvas-outside#initialCanvas {
    z-index: -1;
}
.generatedLine-container {
    position: absolute;
}
.generatedLine-line {
    height: 3px;
    background-color: var(--pinnacle-bg);
    transform-origin: 0px 1.5px;
    max-width: 0px;
    will-change: max-width;
    transition: max-width 0.5s ease-out;

}
#initialCanvas .generatedLine-line {
    background-color: var(--pinnacle-gold);
}
#canv2 .generatedLine-line {
    background-color: var(--pinnacle-gold);
}

#canv2 {
    transform: scaleX(-1);
}
/* Mobile Optimization */
html#mobileView,
#mobileView body {
    z-index: -5;
    position: absolute;
}
#mobileView .container.inner h2 {
    margin-left: 0;
    text-align: center;
}
#mobileView .container.inner .right-body {
    width: 100%;
    margin: 0;
    padding-left: 10vw;
    font-size: 1.5rem;
}
#mobileView #schedule {
    padding-bottom: 350px;
}
#mobileView #schedule .skyline {
    height: 300px;
}
#mobileView #schedule .inner {
    min-height: 0;
}
#mobileView #description, #mobileView #schedule {
    min-height: 80vh;
}
#mobileView canvas {
    display: none;
}
#mobileView .skyline-component.animated {
    transition: none;
    transform: none;
}
#mobileView #scrollDown-container {
    display: none;
}
#mobileView #hero {
    min-height: 50vh;
    height: auto;
    position: relative;
    display: block;
    padding-bottom: 20vh;
}
#mobileView #hero .inner {
    padding: 4rem;
    margin-top: 0 !important;

}
#mobileView #hero #keyLabel, #mobileView #hero #keyByline {
    max-width: 100%;
}
#mobileView #description {
    margin-top: 0;
}
#mobileView #description .overflowTriangle {
    top: calc(-30vh + 1px);
    height: 30vh;
    z-index: -1;
}
#mobileView #schedule h2 {
    margin-bottom: 3rem !important;
    padding: 0;
}
#mobileView h2 {
    font-size: 2.5rem;
    width: 100%;
}
#mobileView #schedule {
    min-height: 100vh;
}
/* ... */

